@@ -13,6 +13,8 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 [Bootstrap::ShareDir::Dist]
 share = share
 
+[ShareDir]
+
 [MetaConfig / @Author::KENTNL/MetaConfig]
 
 [GithubMeta / @Author::KENTNL/GithubMeta]
