@@ -1,5 +1,7 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001002
+ [Added / configure requires]
+ - File::ShareDir::Install 0.06
 
 0.001001 2015-06-30T00:24:44Z
