@@ -1,6 +1,14 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.001002
+ [Added / configure recommends]
+ - File::ShareDir::Install 0.10
+
+ [Added / configure requires]
+ - File::ShareDir::Install 0.06
+
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::ShareDir
 
 0.001001 2015-06-30T00:24:44Z
  [Added / develop requires]
