@@ -1,6 +1,8 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 0.001002
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::ShareDir
 
 0.001001 2015-06-30T00:24:44Z
  [Added / develop requires]
