@@ -1,5 +1,7 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001002
+ [Added / configure recommends]
+ - File::ShareDir::Install 0.10
 
 0.001001 2015-06-30T00:24:44Z
